Add Lit Library

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html>
+
 <head>
   <title>ES Module Template</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="html.style.css">
-<script type="importmap">
-{"imports":{"calculator":"../lib/Calculator.js","d3":"https://cdn.jsdelivr.net/npm/d3@7/+esm","@browser-modules/d3.template":"../node_modules/@browser-modules/d3.template/lib/Calculator.js"}}
+  <script type="importmap">
+  {
+    "imports":{
+      "calculator":"../lib/Calculator.js",
+      "d3":"https://cdn.jsdelivr.net/npm/d3@7/+esm",
+      "lit":"https://cdn.jsdelivr.net/gh/lit/dist@3/core/lit-core.min.js"
+    }
+  }
 </script>
 </head>
+
 <body>
   <script src="index.js" type="module"></script>
+  <my-element></my-element>
 </body>
+
 </html>
