--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,10 @@
   {
     "imports":{
       "calculator":"../lib/Calculator.js",
-      "lit":"https://cdn.jsdelivr.net/gh/lit/dist@3/core/lit-core.min.js"
+      "lit":"https://cdn.jsdelivr.net/gh/lit/dist@3/core/lit-core.min.js",
+      "lit/decorators.js":"../node_modules/lit/decorators.js",
+      "@lit/reactive-element":"../node_modules/@lit/reactive-element",
+      "@lit/reactive-element/decorators/":"../node_modules/@lit/reactive-element/decorators/"
     }
   }
 </script>
