Add Custom Event

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <script src="index.js" type="module"></script>
-  <my-element></my-element>
+  <my-element attribute="value"></my-element>
 </body>
 
 </html>
