--- a/demo/index.html
+++ b/demo/index.html
@@ -6,16 +6,17 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="html.style.css">
   <script type="importmap">
-  {
-    "imports":{
-      "calculator":"../lib/Calculator.js",
-      "lit":"https://cdn.jsdelivr.net/gh/lit/dist@3/core/lit-core.min.js",
-      "lit/decorators.js":"../node_modules/lit/decorators.js",
-      "@lit/reactive-element":"../node_modules/@lit/reactive-element",
-      "@lit/reactive-element/decorators/":"../node_modules/@lit/reactive-element/decorators/"
+    {
+      "imports":{
+        "calculator": "../lib/calculator.js",
+        "lit":"https://cdn.jsdelivr.net/gh/lit/dist@3/core/lit-core.min.js",
+        "lit/": "https://cdn.jsdelivr.net/npm/lit@3/",
+        "@lit/reactive-element": "https://cdn.jsdelivr.net/npm/@lit/reactive-element@2.0.3/reactive-element.js",
+        "@lit/reactive-element/": "https://cdn.jsdelivr.net/npm/@lit/reactive-element@2.0.3/",
+        "@lit/reactive-element/decorators/":"https://cdn.jsdelivr.net/npm/@lit/reactive-element@2.0.3/decorators/"
+      }
     }
-  }
-</script>
+  </script>
 </head>
 
 <body>
